--- a/TappWeb/Pages/Users/List.razor
+++ b/TappWeb/Pages/Users/List.razor
@@ -1,53 +1,46 @@
 ﻿@page "/Users/List"
 
-<div class="container-fluid">
-    <div class="card shadow">
-        <div class="card-header">
-            Users (@_users.Count)
-            <button type="button" class="btn btn-success mx-2">Add</button>
-        </div>
-        <div class="card-body">
-             <table class="table">
-                <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Reference</th>
-                    <th scope="col">Username</th>
-                    <th scope="col">Email</th>
-                    <th scope="col">Firstname</th>
-                    <th scope="col">Lastname</th>
-                    <th scope="col">Status</th>
-                    <th scope="col">Actions</th>
-                </tr>
-                </thead>
-                <tbody>
-                @foreach (var user in _users)
-                {
-                    <tr>
-                        <td>@(_users.IndexOf(user) + 1)</td>
-                        <td>@user.Reference</td>
-                        <td>@user.Username</td>
-                        <td>@user.Email</td>
-                        <td>@user.Firstname</td>
-                        <td>@user.Lastname</td>
-                        <td>
-                            @if (user.IsActive)
-                            {
-                                <span class="badge bg-success">Active</span>
-                            }
-                            else
-                            {
-                                <span class="badge bg-danger">Inactive</span>
-                            }
-                        </td>
-                        <td>
-                            <button type="button" class="btn btn-primary btn-sm">Edit</button>
-                            <button type="button" class="btn btn-danger btn-sm">Delete</button>
-                        </td>
-                    </tr>
-                }
-                </tbody>
-            </table>
-        </div>
-    </div>
-</div>
+<MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="mt-2">
+    <MudCard Outlined="true">
+        <MudCardContent>
+            <MudText>Users (@_users.Count)</MudText>
+            <MudDivider class="mb-2"/>
+            <MudTable Items="_users" Loading="@_loading">
+                <HeaderContent>
+                    <MudTh>Reference</MudTh>
+                    <MudTh>Username</MudTh>
+                    <MudTh>Email</MudTh>
+                    <MudTh>Firstname</MudTh>
+                    <MudTh>Lastname</MudTh>
+                    <MudTh>Status</MudTh>
+                    <MudTh>Actions</MudTh>
+                </HeaderContent>
+                <RowTemplate>
+                    <MudTd DataLabel="Reference">@context.Reference</MudTd>
+                    <MudTd DataLabel="Username">@context.Username</MudTd>
+                    <MudTd DataLabel="Email">@context.Email</MudTd>
+                    <MudTd DataLabel="Firstname">@context.Firstname</MudTd>
+                    <MudTd DataLabel="Lastname">@context.Lastname</MudTd>
+                    <MudTd DataLabel="Status">
+                        @if (context.IsActive)
+                        {
+                            <MudChip Color="Color.Success">Active</MudChip>
+                        }
+                        else
+                        {
+                            <MudChip Color="Color.Error">Inactive</MudChip>
+                        }
+                    </MudTd>
+                    <MudTd>
+                        <MudButton Variant="Variant.Filled" Color="Color.Primary">Edit</MudButton>
+                        <MudButton Variant="Variant.Filled" Color="Color.Error">Delete</MudButton>
+                    </MudTd>
+                </RowTemplate>
+            </MudTable>
+        </MudCardContent>
+     <MudCardActions>
+         <MudButton Variant="Variant.Filled" Color="Color.Tertiary">Add User</MudButton>
+     </MudCardActions>
+    </MudCard>
+</MudContainer>
+
