Navigate to users page after adding a new one

--- a/TappWeb/Pages/Users/Add.razor
+++ b/TappWeb/Pages/Users/Add.razor
@@ -28,7 +28,7 @@
         <MudItem xs="12" sm="5">
             <MudPaper Class="pa-4 mud-height-full">
                 <MudText Typo="Typo.subtitle2">Validation Summary</MudText>
-                @if (success)
+                @if (_success)
                 {
                     <MudText Color="Color.Success">Success</MudText>
                 }
