Be able to remove users from the database

--- a/TappWeb/Pages/Users/List.razor
+++ b/TappWeb/Pages/Users/List.razor
@@ -33,7 +33,7 @@
                     </MudTd>
                     <MudTd>
                         <MudButton Variant="Variant.Filled" Color="Color.Primary">Edit</MudButton>
-                        <MudButton Variant="Variant.Filled" Color="Color.Error">Delete</MudButton>
+                        <MudButton Variant="Variant.Filled" Color="Color.Error" OnClick="() => DeleteUser(context)">Delete</MudButton>
                     </MudTd>
                 </RowTemplate>
             </MudTable>
