--- a/TappWeb/Pages/Index.razor
+++ b/TappWeb/Pages/Index.razor
@@ -2,6 +2,21 @@
 
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
+<AuthorizeView>
+    <Authorized>
+        <h1>Hello @context.User.Identity.Name</h1>
+    </Authorized>
+    <NotAuthorized>
+        <h1>Hello, world!</h1>
+    </NotAuthorized>
+</AuthorizeView>
+
+
 
 Nothing here, Yet.
+
+@code
+{
+    [CascadingParameter]
+    private Task<AuthenticationState> authenticationState { get; set; }
+}
